# DualSenseY-v2

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-multi-platform.yml
include/: appMutex.hpp  appSettings.hpp  application.hpp  applicationVersion.hpp  audioPassthrough.hpp  client.hpp  controllerEmulation.hpp  controllerHotkey.hpp  dsyFileRegistry.hpp  keyboardMouseMapper.hpp  led.hpp  log.hpp  mainWindow.hpp  scePadCustomTriggers.hpp  scePadHandle.hpp  scePadSettings.h  scePadSettings.hpp  strings.hpp  udp.hpp  upnp.hpp  utils.hpp  win32WindowStuff.hpp
resources/translations/: ar.json  de.json  en.json  es.json  it.json  pl.json  pt.json  ru.json  tr.json  uk.json  zh.json
source/: appMutex.cpp  appSettings.cpp  application.cpp  audioPassthrough.cpp  client.cpp  controllerEmulation.cpp  controllerHotkey.cpp  keyboardMouseMapper.cpp  led.cpp  main.cpp  mainWindow.cpp  scePadCustomTriggers.cpp  scePadSettings.cpp  strings.cpp  udp.cpp  upnp.cpp  utils.cpp
